--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation project(':easeui')
 
     // https://mvnrepository.com/artifact/com.alibaba/fastjson
-    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.47'
+    implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.47'
 
 }
 
